display response examples to the dom

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,8 +19,9 @@ body {
 }
 
 .server-display {
-  padding: 5%;
   height: 100vh;
+  overflow: scroll;
+  padding: 5%;
   width: 100%;
   position: fixed;
 }
